Fixed uneven display on mobile, and overlapping text in ingredients list

--- a/static working files/main.css
+++ b/static working files/main.css
@@ -75,7 +75,7 @@ ul.categories {
     line-height: 40px;
 }
 
-/* Index styles */
+/* Homepage styles */
 .main-content {
     /* display: flex; */
 }
@@ -85,11 +85,12 @@ ul.categories {
     display: grid;
     grid-gap: 2rem;
     grid-template-columns: repeat(auto-fill, minmax(21rem, 1fr));
-    max-width: 75vw;
 }
 
 article[class*="recipe-card"] {
-    transition: all 0.1s ease-out;
+    transition: all 0.1s;
+    max-width: 100%;
+    margin: 0 auto;
 }
 
 article[class*="recipe-card"]:hover {
@@ -97,8 +98,8 @@ article[class*="recipe-card"]:hover {
 }
 
 article[class*="recipe-card"] img {
-    width: 350px;
-    height: 500px;
+    width: 300px;
+    height: 450px;
     border-radius: 30px;
     border-color: #fff;
     border-width: 5px;
@@ -142,9 +143,8 @@ article[class*="recipe-card"] time {
 }
 
 ul.ingredients {
-    columns: 2;
-    list-style: none;
-    column-gap: 1rem;
+  list-style: none;
+  padding: 0;
 }
 
 ul.ingredients li {
